--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "jeroennoten/laravel-adminlte": "^3.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "spatie/laravel-permission": "^3.8"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
