--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "astrotomic/laravel-translatable": "^11.8",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "jeroennoten/laravel-adminlte": "^3.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
